2.6.1 (Dec 17, 2024)
  - Updated base image to node:20.13.1-alpine3.20

2.6.0 (May 16, 2024)
  - Updated @splitsoftware/splitio package to version 10.26.0 that includes:
    - Added support for targeting rules based on semantic versions (https://semver.org/).
    - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
    - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.
  - Updated base image to node:20.13.1-alpine3.19 

2.5.1 (Mar 14, 2024)
  - Updated @splitsoftware/splitio package to version 10.25.1 that includes:
    - Updated @splitsoftware/splitio-commons package to version 1.13.1 that includes vulnerability fixes, flag sets support, and other improvements.
  - Updated base image to node:20.11.1-alpine3.19


2.5.0 (Oct 31, 2023)
  - Updated some transitive dependencies for vulnerability fixes.
  - Updated base image to node:18.18.2-alpine3.18
  - Updated @splitsoftware/splitio package to version 10.23.2-rc.1 that includes:
    - Added support for Flag Sets on the SDK, which enables grouping feature flags and interacting with the group rather than individually (more details in our documentation):
      - Added new variations of the get treatment methods to support evaluating flags in given flag set/s.
        - getTreatmentsByFlagSet and getTreatmentsByFlagSets
        - getTreatmentsWithConfigByFlagSets and getTreatmentsWithConfigByFlagSets
      - Added a new optional Split Filter configuration option. This allows the SDK and Split services to only synchronize the flags in the specified flag sets, avoiding unused or unwanted flags from being synced on the SDK instance, bringing all the benefits from a reduced payload.
        - Note: Only applicable when the SDK is in charge of the rollout data synchronization. When not applicable, the SDK will log a warning on init.