@@ -1,6 +1,5 @@
 const { gracefulShutDown } = require('../utils/testWrapper/index');
 
-afterAll( async (done) => {
+afterAll(async () => {
   await gracefulShutDown();
-  done()
 })
