@@ -4,26 +4,23 @@ const { expectError } = require('../../utils/testWrapper/index');
 
 describe('uptime', () => {
   // Testing authorization
-  test('should be 401 if auth is not passed', async (done) => {
+  test('should be 401 if auth is not passed', async () => {
     const response = await request(app)
       .get('/admin/uptime');
     expectError(response, 401, 'Unauthorized');
-    done();
   });
 
-  test('should be 401 if auth does not match', async (done) => {
+  test('should be 401 if auth does not match', async () => {
     const response = await request(app)
       .get('/admin/uptime')
       .set('Authorization', 'invalid');
     expectError(response, 401, 'Unauthorized');
-    done();
   });
 
-  test('should be 200', async (done) => {
+  test('should be 200', async () => {
     const response = await request(app)
       .get('/admin/uptime')
       .set('Authorization', 'test');
     expect(response.statusCode).toBe(200);
-    done();
   });
 });
