@@ -4,22 +4,20 @@ const { expectError, expectErrorContaining } = require('../../utils/testWrapper'
 
 describe('split', () => {
   // Testing authorization
-  test('should be 401 if auth is not passed', async (done) => {
+  test('should be 401 if auth is not passed', async () => {
     const response = await request(app)
       .get('/manager/split?split-name=split');
     expectError(response, 401, 'Unauthorized');
-    done();
   });
 
-  test('should be 401 if auth does not match', async (done) => {
+  test('should be 401 if auth does not match', async () => {
     const response = await request(app)
       .get('/manager/split?split-name=split')
       .set('Authorization', 'invalid');
     expectError(response, 401, 'Unauthorized');
-    done();
   });
 
-  test('should be 400 if split-name is not passed', async (done) => {
+  test('should be 400 if split-name is not passed', async () => {
     const expected = [
       'you passed a null or undefined split-name, split-name must be a non-empty string.'
     ];
@@ -27,10 +25,9 @@ describe('split', () => {
       .get('/manager/split')
       .set('Authorization', 'test');
     expectErrorContaining(response, 400, expected);
-    done();
   });
 
-  test('should be 400 if split-name is empty', async (done) => {
+  test('should be 400 if split-name is empty', async () => {
     const expected = [
       'you passed an empty split-name, split-name must be a non-empty string.'
     ];
@@ -38,10 +35,9 @@ describe('split', () => {
       .get('/manager/split?split-name=')
       .set('Authorization', 'test');
     expectErrorContaining(response, 400, expected);
-    done();
   });
 
-  test('should be 400 if split-name is empty trimmed', async (done) => {
+  test('should be 400 if split-name is empty trimmed', async () => {
     const expected = [
       'you passed an empty split-name, split-name must be a non-empty string.'
     ];
@@ -49,19 +45,17 @@ describe('split', () => {
       .get('/manager/split?split-name=     ')
       .set('Authorization', 'test');
     expectErrorContaining(response, 400, expected);
-    done();
   });
 
-  test('should be 404 if split is not found', async (done) => {
+  test('should be 404 if split is not found', async () => {
     const response = await request(app)
       .get('/manager/split?split-name=not-found')
       .set('Authorization', 'test');
     expect(response.statusCode).toBe(404);
     expect(response.body).toHaveProperty('error', 'Feature flag "not-found" was not found.');
-    done();
   });
 
-  test('should be 200 and matches with passed split in YAML', async (done) => {
+  test('should be 200 and matches with passed split in YAML', async () => {
     const response = await request(app)
       .get('/manager/split?split-name=my-experiment')
       .set('Authorization', 'test');
@@ -77,6 +71,5 @@ describe('split', () => {
       on: '{"desc" : "this applies only to ON treatment"}',
       off: '{"desc" : "this applies only to OFF and only for only_test. The rest will receive ON"}',
     });
-    done();
   });
 });
