@@ -1,12 +1,13 @@
 2.6.1 (Dec 17, 2024)
   - Updated base image to node:20.13.1-alpine3.20
+  - Updated @splitsoftware/splitio package to version 11.0.3 that includes vulnerability fixes and improvements.
 
 2.6.0 (May 16, 2024)
   - Updated @splitsoftware/splitio package to version 10.26.0 that includes:
     - Added support for targeting rules based on semantic versions (https://semver.org/).
     - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
     - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.
-  - Updated base image to node:20.13.1-alpine3.19 
+  - Updated base image to node:20.13.1-alpine3.19
 
 2.5.1 (Mar 14, 2024)
   - Updated @splitsoftware/splitio package to version 10.25.1 that includes:
